--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ img {
 .nav-link {
   position: relative;
   color: var(--header-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link.active {
   color: var(--secondary-btn-color);
@@ -104,7 +105,6 @@ img {
   border-radius: 2px;
   left: 0;
   bottom: -1px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link.active::after {
   background-color: var(--secondary-btn-color);
@@ -446,7 +446,7 @@ img {
   color: var(--subtle-text-color);
   border-radius: 4px;
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
@@ -482,7 +482,9 @@ img {
   flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
-.project-list:hover .overlay,
+.project-list:hover .overlay {
+  transform: translateY(0%);
+}
 .project-list:focus .overlay {
   transform: translateY(0%);
 }
@@ -524,9 +526,7 @@ img {
 }
 .overlay-text {
   color: var(--light-color);
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
 }
 /* Footer */
 
@@ -601,7 +601,7 @@ img {
   visibility: visible;
   pointer-events: initial;
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -622,7 +622,7 @@ img {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), scale 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
@@ -645,6 +645,7 @@ img {
   border-radius: 50%;
   color: var(--header-color);
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:hover,
 .modal-close-btn:focus {
