--- a/css/styles.css
+++ b/css/styles.css
@@ -257,8 +257,6 @@ img {
   flex: none;
   order: 1;
   flex-grow: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button,
@@ -270,6 +268,10 @@ img {
   color: var(--hero-text-color);
   background-color: var(--secondary-btn-color);
   border: 1px solid transparent;
+}
+.btn-fltr {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Hidden item */
 .visually-hidden {
