--- a/css/styles.css
+++ b/css/styles.css
@@ -490,6 +490,14 @@ img {
 .project-list:focus .overlay {
   transform: translateY(0%);
 }
+
+.project-list:focus {
+  transform: translateY(0%);
+}
+.overlay:focus {
+  transform: translateY(0%);
+}
+
 .card-project {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
